[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "dep-trees"
version = "0.0.0"
description = "Dependency trees for my projects."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfcoding/dep-trees"
"Issue Tracker" = "https://github.com/domdfcoding/dep-trees/issues"
"Source Code" = "https://github.com/domdfcoding/dep-trees"

[tool.whey]
base-classifiers = []
python-versions = [ "3.1", "3.9", "3.11", "3.12", "3.13",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "dep_trees"

[tool.importcheck]

[tool.mypy]
python_version = "3.9"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dep_checker.name_mapping]
github3_py = "github3"
